--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,11 @@
     "48": "icons/icon48.svg",
     "128": "icons/icon128.svg"
   },
+  "permissions": ["storage"],
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true
+  },
   "chrome_url_overrides": {
     "newtab": "newtab.html"
   }
