--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "npm run clean && vite build && npm run copy:static",
-    "copy:static": "mkdir -p dist && mv dist/src/pages/newtab/index.html dist/newtab.html && rm -rf dist/src && cp manifest.json dist/manifest.json && cp -r src/assets/icons dist/icons",
+    "copy:static": "mkdir -p dist && mv dist/src/pages/newtab/index.html dist/newtab.html && mv dist/src/pages/options/index.html dist/options.html && rm -rf dist/src && cp manifest.json dist/manifest.json && cp -r src/assets/icons dist/icons",
     "preview": "vite preview",
     "clean": "rm -rf dist",
     "test": "vitest --run",
@@ -18,6 +18,7 @@
   "author": "Saatvik Sharma",
   "license": "MIT",
   "devDependencies": {
+    "@types/chrome": "^0.0.266",
     "@types/node": "^24.7.2",
     "@vitest/ui": "^3.2.4",
     "jsdom": "^27.0.0",
