chore: cross-browser improvements
- manifest: use PNG icons and add Firefox browser_specific_settings
- build: rasterize SVG icons to PNG in dist (if sharp available)
- scripts: add packing and linting commands for Chrome/Firefox
- devDeps: add sharp and web-ext

--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,10 @@
   "version": "1.0.0",
   "description": "Tabula – Your space, no noise.",
   "icons": {
-    "16": "icons/icon16.svg",
-    "32": "icons/icon32.svg",
-    "48": "icons/icon48.svg",
-    "128": "icons/icon128.svg"
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "permissions": ["storage"],
   "options_ui": {
@@ -16,5 +16,11 @@
   },
   "chrome_url_overrides": {
     "newtab": "newtab.html"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "tabula@saatvik.dev",
+      "strict_min_version": "109.0"
+    }
   }
 }
