ci(release): automate packaging, attach to GitHub Releases, optional AMO signing and Chrome publish
- package/version scripts read manifest.json
- release workflow triggers on GitHub Release published
- attaches versioned zips, supports optional signing/publish via secrets

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: Build and Package Extension
 
 on:
+  release:
+    types: [published]
   push:
     tags:
       - 'v*'
@@ -28,10 +30,38 @@ jobs:
         run: npm run lint:firefox
       - name: Package
         run: npm run pack:chrome
+      - name: Determine version
+        id: ver
+        run: echo "version=$(npm run -s version)" >> $GITHUB_OUTPUT
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: extension-zips
           path: |
-            tabula-chrome.zip
-            tabula-firefox.zip
+            tabula-${{ steps.ver.outputs.version }}-chrome.zip
+            tabula-${{ steps.ver.outputs.version }}-firefox.zip
+      - name: Attach assets to GitHub Release
+        if: github.event_name == 'release'
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            tabula-${{ steps.ver.outputs.version }}-chrome.zip
+            tabula-${{ steps.ver.outputs.version }}-firefox.zip
+      - name: Sign for Firefox (AMO)
+        if: github.event_name == 'release' && (env.AMO_JWT_ISSUER != '' && env.AMO_JWT_SECRET != '')
+        env:
+          AMO_JWT_ISSUER: ${{ secrets.AMO_JWT_ISSUER }}
+          AMO_JWT_SECRET: ${{ secrets.AMO_JWT_SECRET }}
+        run: npm run sign:firefox
+      - name: Publish to Chrome Web Store
+        if: github.event_name == 'release' && (env.CHROME_CLIENT_ID != '' && env.CHROME_CLIENT_SECRET != '' && env.CHROME_REFRESH_TOKEN != '' && env.CHROME_EXTENSION_ID != '')
+        env:
+          CHROME_EXTENSION_ID: ${{ secrets.CHROME_EXTENSION_ID }}
+          CHROME_CLIENT_ID: ${{ secrets.CHROME_CLIENT_ID }}
+          CHROME_CLIENT_SECRET: ${{ secrets.CHROME_CLIENT_SECRET }}
+          CHROME_REFRESH_TOKEN: ${{ secrets.CHROME_REFRESH_TOKEN }}
+        run: |
+          export CLIENT_ID="$CHROME_CLIENT_ID"
+          export CLIENT_SECRET="$CHROME_CLIENT_SECRET"
+          export REFRESH_TOKEN="$CHROME_REFRESH_TOKEN"
+          npm run publish:chrome
