--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ node_modules
 out
 dist
 *.tgz
+# packaged artifacts
+web-ext-artifacts
+*.xpi
+*.crx
+# local packaged zips
+/tabula-*.zip
 
 # code coverage
 coverage
@@ -12,7 +18,10 @@ coverage
 
 # logs
 logs
-_.log
+*.log
+npm-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # dotenv environment variable files
@@ -26,6 +35,7 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 .eslintcache
 .cache
 *.tsbuildinfo
+.vite
 
 # IntelliJ based IDEs
 .idea
