--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,12 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "tabula@saatvik.dev",
-      "strict_min_version": "109.0"
+      "strict_min_version": "109.0",
+      "data_collection": {
+        "collects_data": false,
+        "policy_url": "",
+        "data_collection_permissions": {}
+      }
     }
   }
 }
