build: dual-mode manifest for Firefox data collection field
- Dev builds: no gecko.data_collection to avoid Firefox warning during temp load
- CI/Release builds: inject gecko.data_collection via build script (RELEASE_BUILD=1)
- CI: set RELEASE_BUILD=1 in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Test
         run: npm test
       - name: Build
-        run: npm run build
+        run: RELEASE_BUILD=1 npm run build
       - name: Lint (Firefox)
         run: npm run lint:firefox
       - name: Package
