--- a/package.json
+++ b/package.json
@@ -5,36 +5,37 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "node scripts/build.mjs",
+    "build": "bun scripts/build.mjs",
     "preview": "vite preview",
-    "clean": "node scripts/clean.mjs",
-    "test": "vitest --run",
-    "test:watch": "vitest",
-    "test:ui": "vitest --ui",
+    "clean": "bun scripts/clean.mjs",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
+    "test:vitest": "vitest --run",
     "test:coverage": "vitest --run --coverage",
     "type-check": "tsc --noEmit",
     "lint:firefox": "web-ext lint -s dist",
-    "pack:chrome": "node scripts/package.mjs",
-    "pack:firefox": "node scripts/package.mjs",
+    "pack:chrome": "bun scripts/package.mjs",
     "sign:firefox": "web-ext sign -s dist -a web-ext-artifacts",
-    "version": "node scripts/version.mjs",
-    "publish:chrome": "node scripts/version.mjs | xargs -I{} bash -lc 'npx chrome-webstore-upload-cli upload --source tabula-{}-chrome.zip --extension-id $CHROME_EXTENSION_ID && npx chrome-webstore-upload-cli publish --extension-id $CHROME_EXTENSION_ID'"
+    "publish:firefox": "web-ext sign -s dist -a web-ext-artifacts --channel=listed --amo-metadata=.amo-metadata.json",
+    "version": "bun scripts/version.mjs",
+    "publish:chrome": "bun scripts/version.mjs | xargs -I{} bash -lc 'bunx chrome-webstore-upload-cli upload --source tabula-{}-chrome.zip --extension-id $CHROME_EXTENSION_ID && bunx chrome-webstore-upload-cli publish --extension-id $CHROME_EXTENSION_ID'"
   },
   "author": "Saatvik Sharma",
   "license": "MIT",
   "devDependencies": {
     "@types/chrome": "^0.0.266",
     "@types/node": "^24.7.2",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
+    "archiver": "^7.0.1",
+    "chrome-webstore-upload-cli": "^2.1.0",
     "jsdom": "^27.0.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
     "vitest": "^3.2.4",
     "web-ext": "^7.11.0",
-    "archiver": "^7.0.1",
-    "chrome-webstore-upload-cli": "^2.1.0"
+    "bun-types": "latest"
   },
-  "dependencies": {},
   "webExt": {
     "sourceDir": "dist",
     "artifactsDir": "web-ext-artifacts"
