feat(release v1.2.0): introduce Quick Notes and Quote of the Day widgets, enable drag-and-drop reordering for pinned tabs, and externalize the weather API key.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,8 @@ jobs:
         run: bun test
 
       - name: Build
+        env:
+          VITE_WEATHER_API_KEY: ${{ secrets.VITE_WEATHER_API_KEY }}
         run: RELEASE_BUILD=1 bun run build
 
       - name: Lint (Firefox)
